Fix the z-index for backbone modal

--- a/assets/css/_modal.scss
+++ b/assets/css/_modal.scss
@@ -29,7 +29,7 @@
 		width: 500px;
 		background: #fff;
 		margin-left: -250px;
-		z-index: 160000;
+		z-index: 100000;
 	}
 }
 
@@ -42,7 +42,7 @@
 	min-height: 360px;
 	background: #000;
 	opacity: .7;
-	z-index: 159900;
+	z-index: 99900;
 }
 
 .axisbuilder-backbone-modal-main {
